# Reddit-Giveaway-Joiner

./: .gitignore  README.md  main.py  package-lock.json  package.json  sst.config.ts
terraform/: .gitignore  giveaway_log_seed.txt  main.tf  variables.tf  zip_function.sh
terraform/function/: Dockerfile  main.py  openai_comment_prompter.py  pyproject.toml  s3_operations.py
